# GIN-product

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
conf/: conf.yml
gin_product/: main.py  run_graph_features.py
gin_product.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gin_product/utils/: graph_features.py  graph_utils.py  logs_processing.py  utils.py
tests/: test_graph_utils.py  test_utils.py
utils/: genericness.py  graph_features.py  graph_utils.py  logs_processing.py  test_utils.py  utils.py
